--- a/.tmux.conf
+++ b/.tmux.conf
@@ -2,3 +2,14 @@ unbind C-b
 set -g prefix `
 bind ` send-prefix
 bind-key \ swap-pane -dD
+set -s escape-time 0
+set -g mode-mouse on
+set -g mouse-resize-pane on
+set -g mouse-select-pane on
+set -g mouse-select-window on
+set -g mouse-utf8 on
+set -g base-index 1
+setw -g aggressive-resize on
+set-option -g default-terminal xterm-256color
+bind-key -n C-a send-prefix
+source-file ~/.tmux/colors-blue.conf
