--- a/.tmux.conf
+++ b/.tmux.conf
@@ -10,6 +10,6 @@ set -g mouse-select-window on
 set -g mouse-utf8 on
 set -g base-index 1
 setw -g aggressive-resize on
-set-option -g default-terminal xterm-256color
+set-option -g default-terminal "xterm-256color"
 bind-key -n C-a send-prefix
 source-file ~/.tmux/colors-blue.conf
