--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,11 +1,12 @@
 unbind C-b
-set -g prefix `
-bind ` send-prefix
-bind-key \ swap-pane -dD
+set -g prefix C-z
+bind-key -n C-a send-prefix
+bind-key -n C-q send-prefix \; send-prefix
+bind-key -n \ swap-pane -dD
+bind-key \ send-keys '\'
 set -s escape-time 0
 set -g mouse on
 set -g base-index 1
 setw -g aggressive-resize on
 set-option -g default-terminal "xterm-256color"
 bind-key -n C-a send-prefix
-source-file ~/.tmux/colors-blue.conf
