--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,7 +1,5 @@
-unbind C-b
-set -g prefix C-z
-bind-key -n C-a send-prefix
-bind-key -n C-q send-prefix \; send-prefix
+bind-key -n C-g send-prefix
+bind-key -n C-t send-prefix \; send-prefix
 bind-key -n \ swap-pane -dD
 bind-key \ send-keys '\'
 set -s escape-time 0
